--- a/css/main.css
+++ b/css/main.css
@@ -97,41 +97,74 @@ textarea {
 
 
 html {
-  background-color: #fff;
-  height: 100%;
+    background-color: #efeaf5;
+    height: 100%;
 }
 
 body {
-  font-family: 'Source Sans Pro', sans-serif;
-  padding: 2em;
-  font-size: 1.25em;
-  height: 100%;
+    font-family: 'Source Sans Pro', sans-serif;
+    padding: 2em;
+    font-size: 1.25em;
+    height: 100%;
+    color: #222222
 }
 
+main {
+    background-color: #222222 
+    height: 250px;
+    width: 100%;
+}
+
+header,
+footer,
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header h1 {
+    font-size: 3em;
+}
+
+main p {
+font-size: 1.5em;
+margin-bottom: 50px;
+}
 .wrapper {
-  /*add display:flex and set justify-content to space-between*/
-  
-  display: flex;
-  justify-content: space-between;
-  font-weight: 700;
+    /*add display:flex and set justify-content to space-between*/
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    justify-content: space-between;
 }
 
-.div-1, .div-2, .div-3 {
-  /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  width: 30%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #0a0a0a;
-  padding: 12px;
-  border: #222 1px solid;
-  line-height: 1.5em;
-  font-size: 1.2em;
-  background-color: #f5e7e7;
-  height: 300px;
+.div-1,
+.div-2,
+.div-3 {
+    /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #0a0a0a;
+    padding: 12px;
+    /*border: #222 1px solid;*/
+    line-height: 1.5em;
+    font-size: 1.2em;
+    background-color: #ecdaf7;
+    height: 250px;
 }
 
-
+footer {
+    clear: both;
+    height: 50px;
+    width: 100%;
+    color: #222222;
+    margin-top: 50px;
+}
 
 
 /* ==========================================================================
@@ -200,8 +233,10 @@ body {
 
 .clearfix:before,
 .clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
+    content: " ";
+    /* 1 */
+    display: table;
+    /* 2 */
 }
 
 .clearfix:after {
@@ -215,9 +250,9 @@ body {
    ========================================================================== */
 
 @media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 1.25dppx),
+(min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
 }
 
@@ -228,11 +263,13 @@ body {
    ========================================================================== */
 
 @media print {
+
     *,
     *:before,
     *:after {
         background: transparent !important;
-        color: #000 !important; /* Black prints faster:
+        color: #000 !important;
+        /* Black prints faster:
                                    http://www.sanbeiji.com/archives/953 */
         box-shadow: none !important;
         text-shadow: none !important;
